# evalitai-engine

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  cli.md  contract.md  criteria.md  installation.md  jsonl-format.md  metrics.md
examples/offline-chatbot/: README.md  baseline.jsonl  candidate.jsonl  comparison.json  criteria.yaml
src/evalitai/: cli.py
src/evalitai/core/: contract.py  models.py
src/evalitai/io/: jsonl.py
src/evalitai/judge/: __init__.py  criteria.py  metrics.py  prompts.py  provider.py
src/evalitai/metrics/: registry.py
src/evalitai/metrics/deterministic/: __init__.py  checks.py
tests/: test_cli.py  test_contract.py  test_criteria.py  test_deterministic_metrics.py  test_judge.py  test_provider.py
tests/fixtures/: baseline.jsonl  candidate.jsonl  criteria_with_judge.yaml
