[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalitai-engine"
version = "0.1.0"
description = "Open-source evaluation engine for LLM-based systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "evalitai contributors" }]
keywords = ["llm", "evaluation", "ai", "testing", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "litellm>=1.40",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
]

[project.scripts]
evalitai = "evalitai.cli:app"

[project.urls]
Homepage = "https://github.com/ysmmfe/evalitai-engine"
Repository = "https://github.com/ysmmfe/evalitai-engine"
Issues = "https://github.com/ysmmfe/evalitai-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/evalitai"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
